# HL2-DGLabInjuryExperienceMod

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  convert_to_utf8.py  process_hl2_localization_files.py  pydglab-ws-connector.spec  pyproject.toml  requirements.txt  thirdpartylegalnotices.txt
.github/workflows/: msbuild.yml  python-package.yml  release.yml
game/mod_hl2/: gameinfo.txt  icon.tga  icon_big.tga
pydglab-ws-connector/: .env  config.py  connector_server.py  file_version_info.txt  gui.py  gui.spec  server.py  test_client.py
pydglab_ws_connector/: .env  cli.py  config.py  connector_server.py  gui.py
src/: games.sln
src/common/: language.cpp  language.h  randoverride.cpp  studiobyteswap.cpp
src/dglab_ws_client/: dglab_ws_client.cpp  dglab_ws_client.h  dglab_ws_client.vcxproj  test_client.cpp
src/fgdlib/: fgdlib.vcxproj  gamedata.cpp  gdclass.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
src/mathlib/: 3dnow.cpp  3dnow.h  IceKey.cpp  almostequal.cpp  halton.cpp  imagequant.cpp  lightdesc.cpp  mathlib.vcxproj  mathlib.vcxproj.vpc_crc  mathlib_base.cpp  noisedata.h  polyhedron.cpp  powsse.cpp  quantize.cpp  randsse.cpp  simdvectormatrix.cpp  sparse_convolution_noise.cpp  spherical.cpp  sse.cpp  sse.h  sseconst.cpp  ssenoise.cpp  vector.cpp  vmatrix.cpp
src/public/: IGameUIFuncs.h  IHammer.h  OfflineMode.h  PlayerState.h  ScratchPadUtils.cpp  ScratchPadUtils.h  SoundParametersInternal.cpp  UnicodeFileHelpers.cpp  UnicodeFileHelpers.h  UtlCachedFileData.h  XUnzip.cpp  XZip.cpp  arraystack.h  basehandle.h  bitvec.h  blockingudpsocket.cpp  (+172 more)
(+2604 files in other folders)
