[project]
name = "PyDGLab-WS-Connector"
version = "0.1.0"
description = "DG-Lab App Socket 被控协议中转程序"
authors = [
    {name = "Ljzd-PRO",email = "me@ljzd.link"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pydglab-ws (~=1.1.0)",
    "pydantic (~=2.10.6)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "netifaces (>=0.11.0,<0.12.0)",
    "websockets (>=12.0,<13.0)"
]

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "==6.13.0"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry]
packages = [{include = "pydglab_ws_connector"}]

[tool.poetry.scripts]
pydglab-ws-connector = "pydglab_ws_connector.gui:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
